fix: update info

--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -1,6 +1,6 @@
 {
     "changes": "最近变更:",
-    "update-version": "2021-01-29 - 更新至 1.1.19",
+    "update-version": "2023年8月27日 添加了中文语言",
     "add-new-item": "添加新项目。",
     "Factory": "工厂",
     "Visualize": "可视化",
